anthos-bundles/cis-gke-v1.5.0/capabilities.yaml
# Copyright 2024 Google LLC
#
# This is “Software” that is licensed under the “General Software” section of
# the Service Specific Terms (https://cloud.google.com/terms/service-terms) for
# usage in accordance with the following “Scope of Use”: This file may only be
# used on an Anthos cluster, including any associated ci/cd use. “Anthos
# cluster” is defined as “A Cluster (of any kind) registered to a fleet project
# where the Anthos API is enabled”.
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPCapabilities
metadata:
  name: cis-gke-v1.5.0-capabilities
  labels:
    policycontroller.gke.io/bundleName: cis-gke-v1.5.0
  annotations:
    policycontroller.gke.io/bundleVersion: "202405.0"
    policycontroller.gke.io/constraintData: |-
      "{
        bundleName: 'cis-gke-v1.5.0',
        bundleDisplayName: 'CIS GKE Benchmark v1.5.0',
        bundleLink: 'https://cloud.google.com/anthos-config-management/docs/how-to/using-cis-gke-v1.5',
        bundleVersion: '202405.0',
        bundleDescription: 'Use the CIS GKE Benchmark 1.5.0 policy bundle with Policy Controller to evaluate the compliance of your cluster resources against the CIS GKE Benchmark v1.5.0, which is a set of recommendations for configuring GKE to support a robust security posture.',
        controlNumbers: '[4.2.1]',
        severity: 'UNSPECIFIED',
        description: 'Adding capabilities beyond those listed is not allowed. https://kubernetes.io/docs/concepts/security/pod-security-standards/#baseline',
        remediation: 'Containers can add only capabilities listed in the `allowedCapabilities` field. Drop any unlisted capabilities from your containers: https://kubernetes.io/docs/tasks/configure-pod-container/security-context/#set-capabilities-for-a-container',
        minimumTemplateLibraryVersion: '1.10.2',
        constraintHash: '7be54c86a93faa6a8dc983dd2ca0c7ee433ef66f17258c0935033f0917bf1a1f'
      }"
spec:
  enforcementAction: dryrun
  match:
    kinds:
    - apiGroups:
      - ""
      kinds:
      - Pod
    excludedNamespaces:
    - kube-system
    - apigee
  parameters:
    allowedCapabilities:
    - AUDIT_WRITE
    - CHOWN
    - DAC_OVERRIDE
    - FOWNER
    - FSETID
    - KILL
    - MKNOD
    - NET_BIND_SERVICE
    - SETFCAP
    - SETGID
    - SETPCAP
    - SETUID
    - SYS_CHROOT
    exemptImages:
    - gcr.io/gke-release/*
    - gcr.io/config-management-release/*
    - gcr.io/kubebuilder/*
    - gcr.io/anthos-baremetal-release/*
    - gcr.io/gke-on-prem-release/*
    - gcr.io/gke-multi-cloud-release/*
    - gke.gcr.io/*
