anthos-bundles/cis-gke-v1.5.0/require-seccomp-default.yaml
# Copyright 2024 Google LLC
#
# This is “Software” that is licensed under the “General Software” section of
# the Service Specific Terms (https://cloud.google.com/terms/service-terms) for
# usage in accordance with the following “Scope of Use”: This file may only be
# used on an Anthos cluster, including any associated ci/cd use. “Anthos
# cluster” is defined as “A Cluster (of any kind) registered to a fleet project
# where the Anthos API is enabled”.
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPSeccomp
metadata:
  name: cis-gke-v1.5.0-require-seccomp-default
  labels:
    policycontroller.gke.io/bundleName: cis-gke-v1.5.0
  annotations:
    policycontroller.gke.io/bundleVersion: "202405.0"
    policycontroller.gke.io/constraintData: |-
      "{
        bundleName: 'cis-gke-v1.5.0',
        bundleDisplayName: 'CIS GKE Benchmark v1.5.0',
        bundleLink: 'https://cloud.google.com/anthos-config-management/docs/how-to/using-cis-gke-v1.5',
        bundleVersion: '202405.0',
        bundleDescription: 'Use the CIS GKE Benchmark 1.5.0 policy bundle with Policy Controller to evaluate the compliance of your cluster resources against the CIS GKE Benchmark v1.5.0, which is a set of recommendations for configuring GKE to support a robust security posture.',
        controlNumbers: '[4.6.2]',
        severity: 'UNSPECIFIED',
        description: 'Requires that Pods have seccomp profile set to runtime/default.',
        remediation: 'Containers cannot run with a `seccomp` profile other than `runtime/default`. Remove or set the `seccomp` annotation to `runtime/default`. See "Set the Seccomp Profile for a Container" for more information: https://kubernetes.io/docs/tasks/configure-pod-container/security-context/#set-the-seccomp-profile-for-a-container',
        minimumTemplateLibraryVersion: '1.11.1',
        constraintHash: '4d93128726e3fb456b412116e9e11d3e7028dfb9676dc76e66b42064514d3400'
      }"
spec:
  enforcementAction: dryrun
  match:
    kinds:
    - apiGroups:
      - ""
      kinds:
      - Pod
    excludedNamespaces:
    - kube-system
    - gatekeeper-system
    - config-management-monitoring
    - config-management-system
    - asm-system
    - resource-group-system
    - istio-system
    - gke-connect
  parameters:
    allowedProfiles:
    - runtime/default
    exemptImages:
    - gcr.io/gke-release/asm/proxyv2:*
    - gcr.io/anthos-baremetal-release/*
