anthos-bundles/cis-gke-v1.5.0/restrict-creation-with-default-serviceaccount.yaml
# Copyright 2024 Google LLC
#
# This is “Software” that is licensed under the “General Software” section of
# the Service Specific Terms (https://cloud.google.com/terms/service-terms) for
# usage in accordance with the following “Scope of Use”: This file may only be
# used on an Anthos cluster, including any associated ci/cd use. “Anthos
# cluster” is defined as “A Cluster (of any kind) registered to a fleet project
# where the Anthos API is enabled”.
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sBlockCreationWithDefaultServiceAccount
metadata:
  name: cis-gke-v1.5.0-restrict-creation-with-default-serviceaccount
  labels:
    policycontroller.gke.io/bundleName: cis-gke-v1.5.0
  annotations:
    policycontroller.gke.io/bundleVersion: "202405.0"
    policycontroller.gke.io/constraintData: |-
      "{
        bundleName: 'cis-gke-v1.5.0',
        bundleDisplayName: 'CIS GKE Benchmark v1.5.0',
        bundleLink: 'https://cloud.google.com/anthos-config-management/docs/how-to/using-cis-gke-v1.5',
        bundleVersion: '202405.0',
        bundleDescription: 'Use the CIS GKE Benchmark 1.5.0 policy bundle with Policy Controller to evaluate the compliance of your cluster resources against the CIS GKE Benchmark v1.5.0, which is a set of recommendations for configuring GKE to support a robust security posture.',
        controlNumbers: '[4.1.5]',
        severity: 'UNSPECIFIED',
        description: 'Restricts the creation of resources using a default service account. Has no effect during audit.',
        remediation: 'Cannot create resources using a default service account. Use a different account. See "Configure Service Accounts" for more information: https://kubernetes.io/docs/tasks/configure-pod-container/configure-service-account/',
        minimumTemplateLibraryVersion: '1.14.0',
        constraintHash: '6a8d6c1f91d334337012e02564efc999b80bb7a2802bd2c1d06f13ee91c95465'
      }"
spec:
  enforcementAction: dryrun
