anthos-bundles/cis-gke-v1.5.0/restrict-default-namespace.yaml
# Copyright 2024 Google LLC
#
# This is “Software” that is licensed under the “General Software” section of
# the Service Specific Terms (https://cloud.google.com/terms/service-terms) for
# usage in accordance with the following “Scope of Use”: This file may only be
# used on an Anthos cluster, including any associated ci/cd use. “Anthos
# cluster” is defined as “A Cluster (of any kind) registered to a fleet project
# where the Anthos API is enabled”.
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRestrictNamespaces
metadata:
  name: cis-gke-v1.5.0-restrict-default-namespace
  labels:
    policycontroller.gke.io/bundleName: cis-gke-v1.5.0
  annotations:
    policycontroller.gke.io/bundleVersion: "202403.0"
    policycontroller.gke.io/constraintData: |-
      "{
        bundleName: 'cis-gke-v1.5.0',
        bundleDisplayName: 'CIS GKE Benchmark v1.5.0',
        bundleLink: 'https://cloud.google.com/anthos-config-management/docs/how-to/using-cis-gke-v1.5',
        bundleVersion: '202403.0',
        bundleDescription: 'Use the CIS GKE Benchmark 1.5.0 policy bundle with Policy Controller to evaluate the compliance of your cluster resources against the CIS GKE Benchmark v1.5.0, which is a set of recommendations for configuring GKE to support a robust security posture.',
        controlNumbers: '[4.6.1,4.6.4]',
        severity: 'UNSPECIFIED',
        description: 'Restricts pods from using the default namespace.',
        remediation: 'Cannot use the default namespace. Use a different namespace. See "Namespaces" for more information: https://kubernetes.io/docs/concepts/overview/working-with-objects/namespaces/',
        minimumTemplateLibraryVersion: '1.10.2',
        constraintHash: 'f7f0f163af2a8a0bf7a70e4150c062cdc44a1d3edd4326407ffa34ad7885af54'
      }"
spec:
  enforcementAction: dryrun
  match:
    kinds:
      - apiGroups:
          - ""
        kinds:
          - Pod
  parameters:
    restrictedNamespaces:
      - default
