anthos-bundles/cis-gke-v1.5.0/restrict-nodes-proxy.yaml
# Copyright 2024 Google LLC
#
# This is “Software” that is licensed under the “General Software” section of
# the Service Specific Terms (https://cloud.google.com/terms/service-terms) for
# usage in accordance with the following “Scope of Use”: This file may only be
# used on an Anthos cluster, including any associated ci/cd use. “Anthos
# cluster” is defined as “A Cluster (of any kind) registered to a fleet project
# where the Anthos API is enabled”.
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRestrictRoleRules
metadata:
  name: cis-gke-v1.5.0-restrict-nodes-proxy
  labels:
    policycontroller.gke.io/bundleName: cis-gke-v1.5.0
  annotations:
    policycontroller.gke.io/bundleVersion: "202405.0"
    policycontroller.gke.io/constraintData: |-
      "{
        bundleName: 'cis-gke-v1.5.0',
        bundleDisplayName: 'CIS GKE Benchmark v1.5.0',
        bundleLink: 'https://cloud.google.com/anthos-config-management/docs/how-to/using-cis-gke-v1.5',
        bundleVersion: '202405.0',
        bundleDescription: 'Use the CIS GKE Benchmark 1.5.0 policy bundle with Policy Controller to evaluate the compliance of your cluster resources against the CIS GKE Benchmark v1.5.0, which is a set of recommendations for configuring GKE to support a robust security posture.',
        controlNumbers: '[4.1.10]',
        severity: 'UNSPECIFIED',
        description: 'Restricts the access to the proxy sub-resource of nodes in `Roles` and `ClusterRoles`.',
        remediation: 'The access to nodes/proxy in Roles and ClusterRoles is restricted. Remove all access rules for nodes/proxy from your Roles and ClusterRoles. See "RoleBinding and ClusterRoleBinding" for more information: https://kubernetes.io/docs/reference/access-authn-authz/rbac/#rolebinding-and-clusterrolebinding',
        minimumTemplateLibraryVersion: '1.15.2',
        constraintHash: '46141fee31ae7ffb35a4b046eec1eeef4561eee6e183cae2fba712b316ed2dd9'
      }"
spec:
  enforcementAction: dryrun
  match:
    kinds:
      - apiGroups:
          - rbac.authorization.k8s.io
        kinds:
          - Role
          - ClusterRole
  parameters:
    disallowedRules:
      - apiGroups:
          - ""
        resources:
          - nodes/proxy
        verbs:
          - create
          - update
          - patch
    exemptions:
      clusterRoles:
        - name: admin
        - name: cluster-admin
        - name: config-management-operator
        - name: gatekeeper-manager-role
        - name: kubelet-api-admin
        - name: metering
        - name: system:cloud-controller-manager
        - name: system:controller:generic-garbage-collector
        - name: system:controller:namespace-controller
        - name: system:controller:resourcequota-controller
        - name: system:gke-common-webhooks
        - name: system:kube-controller-manager
        - name: system:kubelet-api-admin
        - name: system:kubestore-collector
      roles:
        - name: agent-updater
          namespace: gke-connect
