anthos-bundles/cis-gke-v1.5.0/restrict-serviceaccounts-token.yaml
# Copyright 2024 Google LLC
#
# This is “Software” that is licensed under the “General Software” section of
# the Service Specific Terms (https://cloud.google.com/terms/service-terms) for
# usage in accordance with the following “Scope of Use”: This file may only be
# used on an Anthos cluster, including any associated ci/cd use. “Anthos
# cluster” is defined as “A Cluster (of any kind) registered to a fleet project
# where the Anthos API is enabled”.
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRestrictRoleRules
metadata:
  name: cis-gke-v1.5.0-restrict-serviceaccounts-token
  labels:
    policycontroller.gke.io/bundleName: cis-gke-v1.5.0
  annotations:
    policycontroller.gke.io/bundleVersion: "202403.0"
    policycontroller.gke.io/constraintData: |-
      "{
        bundleName: 'cis-gke-v1.5.0',
        bundleDisplayName: 'CIS GKE Benchmark v1.5.0',
        bundleLink: 'https://cloud.google.com/anthos-config-management/docs/how-to/using-cis-gke-v1.5',
        bundleVersion: '202403.0',
        bundleDescription: 'Use the CIS GKE Benchmark 1.5.0 policy bundle with Policy Controller to evaluate the compliance of your cluster resources against the CIS GKE Benchmark v1.5.0, which is a set of recommendations for configuring GKE to support a robust security posture.',
        controlNumbers: '[4.1.13]',
        severity: 'UNSPECIFIED',
        description: 'Restricts the creation of serviceaccount tokens in `Roles` and `ClusterRoles`.',
        remediation: 'The creation of serviceaccount tokens in Roles and ClusterRoles is restricted. Remove all serviceaccount tokens creation rules from your Roles and ClusterRoles. See "RoleBinding and ClusterRoleBinding" for more information: https://kubernetes.io/docs/reference/access-authn-authz/rbac/#rolebinding-and-clusterrolebinding',
        minimumTemplateLibraryVersion: '1.15.2',
        constraintHash: 'b287c15f5b94a78d0d30de5de16add2c2085169cd99839f4dfcccb674a53cc85'
      }"
spec:
  enforcementAction: dryrun
  match:
    kinds:
      - apiGroups:
          - rbac.authorization.k8s.io
        kinds:
          - Role
          - ClusterRole
  parameters:
    disallowedRules:
      - apiGroups:
          - ""
        resources:
          - serviceaccounts/token
        verbs:
          - create
    exemptions:
      clusterRoles:
        - name: admin
        - name: cluster-admin
        - name: config-management-operator
        - name: edit
        - name: servicemesh
        - name: system:aggregate-to-edit
        - name: system:cloud-controller-manager
        - name: system:kube-controller-manager
        - name: system:node
        - name: calico
        - name: calico-cni-plugin
      roles:
        - name: agent-updater
          namespace: gke-connect
