anthos-bundles/cis-gke-v1.5.0/restrict-system-masters-group.yaml
# Copyright 2024 Google LLC
#
# This is “Software” that is licensed under the “General Software” section of
# the Service Specific Terms (https://cloud.google.com/terms/service-terms) for
# usage in accordance with the following “Scope of Use”: This file may only be
# used on an Anthos cluster, including any associated ci/cd use. “Anthos
# cluster” is defined as “A Cluster (of any kind) registered to a fleet project
# where the Anthos API is enabled”.
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAvoidUseOfSystemMastersGroup
metadata:
  name: cis-gke-v1.5.0-restrict-system-masters-group
  labels:
    policycontroller.gke.io/bundleName: cis-gke-v1.5.0
  annotations:
    policycontroller.gke.io/bundleVersion: "202403.0"
    policycontroller.gke.io/constraintData: |-
      "{
        bundleName: 'cis-gke-v1.5.0',
        bundleDisplayName: 'CIS GKE Benchmark v1.5.0',
        bundleLink: 'https://cloud.google.com/anthos-config-management/docs/how-to/using-cis-gke-v1.5',
        bundleVersion: '202403.0',
        bundleDescription: 'Use the CIS GKE Benchmark 1.5.0 policy bundle with Policy Controller to evaluate the compliance of your cluster resources against the CIS GKE Benchmark v1.5.0, which is a set of recommendations for configuring GKE to support a robust security posture.',
        controlNumbers: '[5.1.7]',
        severity: 'UNSPECIFIED',
        description: 'Disallows the use of 'system:masters' group. By default, only CREATE and UPDATE are blocked. Has no effect during audit.',
        remediation: 'Remove the system:masters group from all users in the cluster.',
        minimumTemplateLibraryVersion: '1.16.2',
        constraintHash: '0c7276df3597cab8e0589951f0a48cc6c0e39bebac4e976f1ef2db957d2fa601'
      }"
spec:
  enforcementAction: dryrun
  parameters:
    allowlistedUsernames:
      - kubernetes-admin
