anthos-bundles/cis-gke-v1.5.0/selinux.yaml
# Copyright 2024 Google LLC
#
# This is “Software” that is licensed under the “General Software” section of
# the Service Specific Terms (https://cloud.google.com/terms/service-terms) for
# usage in accordance with the following “Scope of Use”: This file may only be
# used on an Anthos cluster, including any associated ci/cd use. “Anthos
# cluster” is defined as “A Cluster (of any kind) registered to a fleet project
# where the Anthos API is enabled”.
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPSELinuxV2
metadata:
  name: cis-gke-v1.5.0-selinux
  labels:
    policycontroller.gke.io/bundleName: cis-gke-v1.5.0
  annotations:
    policycontroller.gke.io/bundleVersion: "202405.0"
    policycontroller.gke.io/constraintData: |-
      "{
        bundleName: 'cis-gke-v1.5.0',
        bundleDisplayName: 'CIS GKE Benchmark v1.5.0',
        bundleLink: 'https://cloud.google.com/anthos-config-management/docs/how-to/using-cis-gke-v1.5',
        bundleVersion: '202405.0',
        bundleDescription: 'Use the CIS GKE Benchmark 1.5.0 policy bundle with Policy Controller to evaluate the compliance of your cluster resources against the CIS GKE Benchmark v1.5.0, which is a set of recommendations for configuring GKE to support a robust security posture.',
        controlNumbers: '[4.2.1]',
        severity: 'UNSPECIFIED',
        description: 'Cannot set the SELinux type or set a custom SELinux user or role option.',
        remediation: 'Pods can use only the `seLinuxOptions` configurations listed in the `allowedSELinuxOptions` field. See "Pod Security Standards" for more information: https://kubernetes.io/docs/concepts/security/pod-security-standards/#baseline',
        minimumTemplateLibraryVersion: '1.10.1',
        constraintHash: 'a813d0a1c434ef5e0310abcfbd02a43a0125463e6e934c61eebaaa778c84de95'
      }"
spec:
  enforcementAction: dryrun
  match:
    kinds:
      - apiGroups:
          - ""
        kinds:
          - Pod
    excludedNamespaces:
      - kube-system
  parameters:
    allowedSELinuxOptions:
      - type: container_t
      - type: container_init_t
      - type: container_kvm_t
